#74 implemented the Vector API SIMD kernel spec and handlinf for vision